# rk3588-ai-vision-pipeline

./: CMakeLists.txt  LICENSE  README.md  build-linux.sh  deploy.sh  start_rtsp.sh  stop_rtsp.sh
docs/: 项目开发全记录.md
images/: camera_demo.py
include/: config.h
include/core/: pipeline.h  postprocess.h  preprocess.h
include/hw/: mpp_encoder.h  rga_preprocess.h
include/io/: camera_capture.h  coco_names.h  json_output.h  mqtt_publisher.h  overlay.h
include/safety/: safety_state.h
process/: postprocess.cpp  preprocess.cpp
src/: main.cpp
weights/: test.py
